tests/prsl/fixtures/valid/multiple-records.prsl
begin-record
record r-alpha {
  content : "first";
}
end-record
begin-record
record r-beta {
  content : "second";
}
end-record
---
begin-record
record r-gamma {
  content : "third";
}
end-record
---
