tests/prsl/fixtures/invalid/bad-relation-type.prsl
begin-record
record bad-relation {
  content : "x";
  relational-metadata {
    (other, unknown-type);
  };
}
end-record
---
